; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-resp.c_resp_print_inline.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-resp.c_resp_print_inline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @resp_print_inline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @resp_print_inline(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  store i32 %11, i32* %8, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @CONSUME_CR_OR_LF(i32* %12, i32 %13)
  %15 = load i32*, i32** %6, align 8
  store i32* %15, i32** %10, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @FIND_CR_OR_LF(i32* %16, i32 %17)
  %19 = load i32*, i32** %10, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = ptrtoint i32* %19 to i64
  %22 = ptrtoint i32* %20 to i64
  %23 = sub i64 %21, %22
  %24 = sdiv exact i64 %23, 4
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %9, align 4
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @RESP_PRINT_SEGMENT(i32* %26, i32* %27, i32 %28)
  %30 = load i32*, i32** %10, align 8
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @CONSUME_CR_OR_LF(i32* %30, i32 %31)
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %8, align 4
  %35 = sub nsw i32 %33, %34
  store i32 %35, i32* %4, align 4
  br label %37

36:                                               ; No predecessors!
  store i32 -1, i32* %4, align 4
  br label %37

37:                                               ; preds = %36, %3
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @CONSUME_CR_OR_LF(i32*, i32) #1

declare dso_local i32 @FIND_CR_OR_LF(i32*, i32) #1

declare dso_local i32 @RESP_PRINT_SEGMENT(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
